CPG-DEV/src/objects/MarketIntelligenceDetail__c.object
<CustomObject>
    <fields>
        <fullName>AnnualVolume__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is created for cargill Project as a part of Sprint-3 Build</description>
        <label>Annual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaptiveDemand__c</fullName>
        <description>Created by EB for CCC &amp; GEOS as on 19-Apr-17</description>
        <label>Captive Demand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCargillSupplier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, supplier will be Cargill.</description>
        <label>Is Cargill Supplier?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketIntelligence__c</fullName>
        <label>Market Intelligence</label>
        <referenceTo>MarketIntelligence__c</referenceTo>
        <relationshipLabel>Market Intelligence Details</relationshipLabel>
        <relationshipName>Market_Intelligence_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ShipToName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by EB for CCC &amp; GEOS as on 19-Apr-17</description>
        <label>Ship To Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Intelligence Details (Ship To Name)</relationshipLabel>
        <relationshipName>Market_Intelligence_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShiptoCountry__c</fullName>
        <description>Created by EB for CCC &amp; GEOS as on 19-Apr-17</description>
        <formula>IF( ISBLANK( ShipToName__r.BillingCountry ) , ShipToName__r.ShippingCountry , ShipToName__r.BillingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierName__c</fullName>
        <label>SupplierName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Market Intelligence Details</relationshipLabel>
        <relationshipName>Market_Intelligence_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <description>This field stores the Parent Market Intelligence UnitofMeasure Value</description>
        <formula>TEXT(MarketIntelligence__r.UnitofMeasure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit of Measure</label>
        <type>Text</type>
    </fields>
    <label>Market Intelligence Detail</label>
    <nameField>
        <displayFormat>MID{000000}</displayFormat>
        <label>Market Intelligence Detail  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Intelligence Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>